# upscale-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/: main.py
src/api/: routes.py
src/core/: application.py  config.py  image_processor.py
src/models/: model_manager.py
src/utils/: image_cache.py  memory_manager.py  system_info.py  tools.py
