[project]
name = "upscale-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "spandrel>=0.4.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "uvicorn>=0.34.2",
]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
